syntax = "proto3";

package authProto;
option go_package = "./authProto";

message AccessTokenSearchReq {
    string accessToken = 1;
}

message AccessTokenSearchRes {
    bool isValid = 1;
}

message RolesCountReq {}

message RolesCountRes {}

service AuthGrpcService {
    rpc AccessTokenSearch(AccessTokenSearchReq) returns (AccessTokenSearchRes);
    rpc RolesCount(RolesCountReq) returns (RolesCountRes);
}
