syntax = "proto3";

package itemProto;
option go_package = "./itemProto";

message FindItemsInIdsReq {
    repeated int32 items = 1;
}

message FindItemsInIdsRes {
    repeated Item items = 1;   
}

message Item {
    string id = 1;
    string title = 2;
    double price = 3;
    string imageUrl = 4;
    int32 damage = 5;
}

service ItemGrpcService {
    rpc FindItemInIds(FindItemsInIdsReq) returns (FindItemsInIdsRes);
}
